<resources>
    <string name="app_name">Android-Estimate</string>
    <string name="title_activity_list_of_online_cad_builders">OCAD projects</string>
    <string name="title_activity_show_works">Estimate positions:</string>
    <string name="title_of_importance">Importance:</string>
    <string name="new_task_enter_name_dialog_title">Enter name</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are you sure you want exit app?</string>
    <string name="authorize_remember_me">Remember me</string>
    <string name="service_caption">Service for use</string>
    <string name="service_registration"><u>REGISTRATION</u></string>
    <string name="title_activity_edit">Editing</string>
    <string name="dialog_finding_caption">Searching&#8230;</string>
    <string name="dialog_finding_message">Please, wait for searches of computers on the network.</string>
    <string name="connections_not_found">Connections not found</string>
    <string name="server_is_busy">Server is busy. Try again in few minutes</string>
    <string name="server_not_respond">Server is not respond. Try again later</string>
    <string name="computer_name">Computer name:</string>
    <string name="user_name">User name:</string>
    <string name="ip_address">Ip address:</string>
    <string name="dialog_title">Computers found:</string>
    <string name="nav_signin_title">Sign in</string>
    <string name="nav_ocad_projects">O-CAD projects</string>
    <string name="nav_cpln_projects">CLP projects</string>
    <string name="nav_zml_projects">E-Estimate projects</string>
    <string name="nav_arp_projects">ARP projects</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="makes_photo">Make photo</string>
    <string name="view_photo">View photo</string>
    <string name="upload_photo_to_server">Upload photo</string>
    <string name="standard_del_project">Delete project</string>
    <string name="standard_save_project">Save project</string>
    <string name="standard_authorization">Authorization</string>
    <string name="standard_upload_project">Upload project</string>
    <string name="standard_upload_project_to_clp">Export to CLP</string>
    <string name="standard_upload_project_to_ee">Export to EE</string>
    <string name="standard_update_project">Update from file</string>
    <string name="standard_norms_sheet">Works sheet</string>
    <string name="standard_resources_sheet">Resources sheet</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About</string>
    <string name="editing_task_list">Edit list&#8230;</string>
    <string name="user_enter">Sign in</string>
    <string name="add_group">Add</string>
    <string name="edit_group">Edit</string>
    <string name="press_plus_bnt">Push the + button for add</string>
    <string name="press_plus_for_add">new task</string>
    <string name="unknownBuildName">Name of build unknown</string>
    <string name="objectEstimateCapt">Object estimate</string>
    <string name="localEstimateCapt">Local estimate</string>
    <string name="toast_success_update">Success updated</string>
    <string name="toast_success_reload">Success reload</string>
    <string name="toast_success_uploaded">Success send</string>
    <string name="toast_unsuccess">Aborted&#8230;</string>
    <string name="build">Стройка</string>
    <string name="objectEstimate">ОбъектнаяСмета</string>
    <string name="localEstimate">ЛокальнаяСмета</string>
    <string name="localEstimatePosition">ПозицияЛокальнойСметы</string>
    <string name="positionConsists">СоставПозиции</string>
    <string name="unpack_title">Unpacking file</string>
    <string name="unpack_message">Wait, while file unpacking</string>
    <string name="use_filter_to_work">Filter by parts</string>
    <string name="use_work_filter_by_layer">Filter by layers</string>
    <string name="use_work_filter_by_group">Filter by groups</string>
    <string name="use_work_filter_by_ls">Filter by local estimates</string>
    <string name="cancel_all_filters">Cancel filter</string>
    <string name="filter_by">Filtering by</string>
    <string name="filters_not_found">Filters not found</string>
    <string name="not_logging_title">Not authorized</string>
    <string name="not_logging_message">You are not authorized. Do you want authorize now?</string>
    <string name="not_logging_positive_btn">Yes</string>
    <string name="not_logging_negative_btn">No</string>
    <string name="refresh_builds">Update</string>
    <string name="online_builds">OnLine projects</string>
    <string name="offline_builds">Projects on sd-card</string>
    <string name="refresh_by_found_ips">Refresh by found ips</string>
    <string name="dialog_works_load">Wait, while loading positions</string>
    <string name="dialogLoadingTitle">Loading&#8230;</string>
    <string name="dialogWaitForLoading">Wait, while project loading</string>
    <string name="dialog_update_title">Updating&#8230;</string>
    <string name="dialog_update_message">Wait, while project update</string>
    <string name="dialog_upload">Uploading&#8230;</string>
    <string name="dialog_upload_mess">Wait, while photos uploads to server</string>
    <string name="dialog_upload_project_mess">Wait, while saving project </string>
    <string name="message_success_upload">Photos success uploaded</string>
    <string name="message_nothing_to_upload">Nothing to upload</string>
    <string name="message_success_saved">Project success uploaded</string>
    <string name="dialog_project_exists_title">Project already exists</string>
    <string name="message_project_replace">Rewrite</string>
    <string name="message_project_update">Update</string>
    <string name="message_project_load_as_new">Загрузить как новый</string>
    <string name="error_download_builds_list">Download error. Can not connect to server</string>
    <string name="connection_failed">Download error. No internet connection</string>
    <string name="connection_what_use">How do you want to connect to internet?</string>
    <string name="error_upload_photos">Upload photos error. Probably no internet connection</string>
    <string name="error_save_project">Project saves error. Probably no internet connection or server is busy</string>
    <string name="error_load_project_from_socket">Error while loading project</string>
    <string name="show_tasks_as_text">Text</string>
    <string name="show_tasks_as_checkbox">Checklist</string>
    <string name="add_new_task">Add</string>
    <string name="delete_current_task">Delete</string>
    <string name="fragmentColorTitle">Choose importance</string>
    <string name="importantNoText">Not important</string>
    <string name="importantTitleText">Law importance</string>
    <string name="importantMediumText">Medium importance</string>
    <string name="importantVeryText">High importance</string>
    <string name="what_need_todo">What need to do?</string>
    <string name="subTaskHint">Add sub-task</string>
    <string name="dialogDeleteProjectTitle">Deleting&#8230;</string>
    <string name="dialogWaitForDeleting">Wait, while project is deleted</string>
    <string name="user_edit_dialog_cancel">Cancel</string>
    <string name="user_edit_dialog_title">Edit&#8230;</string>
    <string name="user_edit_dialog_delete">Del</string>
    <string name="user_edit_dialog_edit">Change.</string>
    <string name="works_item_facts_title"><u>Facts</u> </string>
    <string name="works_item_more_title"> <u>More</u> </string>
    <string name="title_activity_show_works_param">Information about</string>
    <string name="tab_detail">Detail</string>
    <string name="tab_consists">Consist</string>
    <string name="pos_executing">Executing</string>
    <string name="pos_including">Including</string>
    <string name="pos_start_executing">Start</string>
    <string name="pos_percent_executing">Made(%)</string>
    <string name="pos_cipher">Cipher:</string>
    <string name="pos_name">Name:</string>
    <string name="pos_сount">Count:</string>
    <string name="pos_measured">Meas.:</string>
    <string name="pos_measure_full">Measure:</string>
    <string name="pos_price_by_one">Cost of one(hrn.)</string>
    <string name="pos_total_by_one">Total</string>
    <string name="pos_total_common">Common</string>
    <string name="pos_zp_by_one">Salary</string>
    <string name="pos_zp_full">Salary</string>
    <string name="pos_use_machine_by_one">Operation of machines</string>
    <string name="pos_zp_machine_by_one">with salary</string>
    <string name="pos_total_price">Total cost</string>
    <string name="pos_price_total">Total</string>
    <string name="pos_zp_total">Salary</string>
    <string name="pos_use_machine_total">Operation of machines</string>
    <string name="pos_zp_machine_total">with salary</string>
    <string name="pos_use_machine_hours">Machines service</string>
    <string name="pos_use_workers_hours">Labor costs of workers</string>
    <string name="pos_use_hours_by_one">By one</string>
    <string name="pos_use_hours_by_one_full">By one</string>
    <string name="pos_use_with_zp">with salary</string>
    <string name="pos_use_hours_Total">Total</string>
    <string name="toggle_executing_on">Done</string>
    <string name="toggle_executing_off">Not done</string>
    <string name="toggle_including_on">On</string>
    <string name="toggle_including_off">Off</string>
    <string name="proj_name">Name</string>
    <string name="proj_cipher">Cipher</string>
    <string name="proj_customer">Costumer</string>
    <string name="proj_contractor">Contractor</string>
    <string name="proj_total">Total</string>
    <string name="title_activity_show_facts">Facts</string>
    <string name="facts_percent">Percent:</string>
    <string name="facts_count">Count:</string>
    <string name="facts_by_fact">By facts(h.):</string>
    <string name="facts_by_plan">By plan(h.):</string>
    <string name="about_dialog_site_caption">Official site</string>
    <string name="about_dialog_version_caption">Version</string>
    <string name="about_dialog_support_caption">Support</string>
    <string name="about_dialog_phone_caption">Phones</string>
    <string name="about_dialog_site">www.expertsoft.com.ua</string>
    <string name="about_dialog_version">1.0.0</string>
    <string name="about_dialog_support">support@expertsoft.com.ua</string>
    <string name="about_dialog_phone">(044) 233&#8211;0&#8211;234, 360&#8211;60&#8211;88, 233&#8211;0&#8211;133</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Authorize</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="preference_category_title">Language settings</string>
    <string name="preference_languages_list_title">Interface language</string>
    <string name="preference_languages_list_key">interface_language</string>
    <string name="preference_languages_list_default">English</string>
    <string name="preference_languages_list_dialog_title">Choose language</string>
    <string name="preference_data_languages_list_title">Data language</string>
    <string name="preference_data_languages_list_key">data_language</string>
    <string name="preference_data_languages_list_default">Russian</string>
    <string name="preference_data_languages_list_dialog_title">Choose language</string>
    <string name="preference_developer_site_title">Developer site</string>
    <string name="preference_developer_site">http://www.expertsoft.com.ua</string>
    <string name="preference_other">Other</string>
    <string name="drawer_users"> User"s </string>
    <string name="drawer_standard"> Main </string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>