<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_preference_screen">

    <PreferenceCategory
        android:title="@string/preference_category_title"
        android:key="language_settings_category">
        <!-- App language -->
        <ListPreference
            android:title="@string/preference_languages_list_title"
            android:key="@string/preference_languages_list_key"
            android:entries="@array/languages"
            android:entryValues="@array/languages"
            android:dialogTitle="@string/preference_languages_list_dialog_title"
            android:defaultValue="@string/preference_languages_list_default"
            android:summary="@string/preference_languages_list_default">
        </ListPreference>
        <!-- Data language -->
        <ListPreference
            android:title="@string/preference_data_languages_list_title"
            android:key="@string/preference_data_languages_list_key"
            android:entryValues="@array/languages_data"
            android:entries="@array/languages_data"
            android:dialogTitle="@string/preference_data_languages_list_dialog_title"
            android:defaultValue="@string/preference_data_languages_list_default"
            android:summary="@string/preference_data_languages_list_default">
        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Common">
        <CheckBoxPreference
            android:key="show_hidden"
            android:title="Show hidden works"
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_other">
        <Preference android:title="@string/preference_developer_site_title" >
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/preference_developer_site" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>