<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.com.expertsoft.android_smeta.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layoutEmptyBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="visible"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgEmptyBox"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/empty_box" />

        <TextView
            android:id="@+id/txtEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_plus_bnt"/>

        <TextView
            android:id="@+id/txtEmptyForAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_plus_for_add"/>

    </LinearLayout>

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/buildersStandardList"
        android:background="@drawable/bg_key"
        android:groupIndicator="@android:color/transparent"
        android:visibility="gone">
    </ExpandableListView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/buildersUsersList"
        android:visibility="gone"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="left"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_test">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
